Added get user info endpoint
